WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196546
[XML Parser] Insert the error message block when stopping parsing and an error occurred
https://bugs.webkit.org/show_bug.cgi?id=196546
Summary
[XML Parser] Insert the error message block when stopping parsing and an erro...
Chris Dumez
Reported
2019-04-03 10:02:03 PDT
Insert the error message block when stopping parsing and an error occurred.
Attachments
Patch
(5.87 KB, patch)
2019-04-03 10:08 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.87 KB, patch)
2019-04-03 10:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-03 10:08:49 PDT
Created
attachment 366620
[details]
Patch
Chris Dumez
Comment 2
2019-04-03 10:51:01 PDT
Created
attachment 366623
[details]
Patch
WebKit Commit Bot
Comment 3
2019-04-03 12:13:55 PDT
Comment on
attachment 366623
[details]
Patch Clearing flags on attachment: 366623 Committed
r243817
: <
https://trac.webkit.org/changeset/243817
>
WebKit Commit Bot
Comment 4
2019-04-03 12:13:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-04-03 12:21:09 PDT
<
rdar://problem/49568295
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug